Add fields for quantity and notes in order detail form

--- a/starweb/app/views/orders/_form_has_product.html.erb
+++ b/starweb/app/views/orders/_form_has_product.html.erb
@@ -18,7 +18,7 @@
 <div class="input-group mb-3">
   <div class="input-group-prepend">
     <label class="input-group-text" for="inputGroupSelect01">Producto</label>
-    <%= form.select :product_id, Product.all.collect {|p| [ "#{p.name} #{p.price}", p.id ] }, {prompt: 'Selecciona el producto'}, class: 'form-control', id: 'e' %>
+    <%= form.select :product_id, Product.all.collect {|p| [ "#{p.name} #{p.price}", p.id ] }, {prompt: 'Selecciona el producto'}, class: 'form-control', id: 'e3' %>
   </div>
 </div>
 
@@ -46,3 +46,9 @@
   <%= form.submit 'Guardar', class: 'btn btn-primary' %>
 </div>
 <% end %>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        $("#e3").select2();
+    });
+</script>
