--- a/starweb/app/views/orders/invoice.html.erb
+++ b/starweb/app/views/orders/invoice.html.erb
@@ -12,10 +12,10 @@
 
 <div class="row">
   <div class="col-9">
-    <h6><b>FECHA,</b> <%= I18n.l(Date.today, format: '%d de %B de %Y').upcase %></h6>
+    <h6><b>FECHA,</b> <%= I18n.l(Date.today, format: '%d %B %Y').upcase %></h6>
   </div>
   <div class="col-3">
-    <h6><b>CONDICIONES DE VENTA:</b> CONTADO</h6>
+    <h6><b>CONDICIONES DE VENTA:</b>  <i class="fas fa-times ml-3"></i> <b>CONTADO</b></h6>
   </div>
 </div>
 
@@ -34,9 +34,11 @@
 
 <h6><b>DIRECCIÓN:</b> <%= "#{@order.client.city}, #{@order.client.country}".upcase %></h6>
 
+<br>
+
 <div class="row">
   <div class="col-12">
-    <table class="table table-sm text-center">
+    <table class="table table-sm text-center table-borderless">
       <thead>
       <tr>
         <th scope="col"></th>
@@ -62,7 +64,7 @@
       <% @order.has_products.each do |hasProduct| %>
         <% total += hasProduct.quantity * hasProduct.product.price %>
         <tr>
-          <th scope="row"><%= hasProduct.quantity %></th>
+          <th scope="row"><%= hasProduct.quantity %></th scope="row">
           <th scope="row"><%= hasProduct.product.name %></th>
           <th scope="row"><%= number_with_delimiter(hasProduct.product.price, :delimiter => ',') %></th>
           <th scope="row"></th>
@@ -72,24 +74,23 @@
       <% end %>
       </tbody>
     </table>
+    <br>
     <hr>
     <div class="row">
       <div class="col-9 pl-5">
         <p id="total_string"><b>TOTAL A PAGAR GS.</b></p>
       </div>
       <div class="col-3 pl-5">
-        <p><b>TOTAL:</b> <%= number_with_delimiter(total, :delimiter => ',') %></b></p>
+        <p><b>TOTAL:</b> <%= number_with_delimiter(total, :delimiter => ',') %></br></p>
       </div>
     </div>
-
     <hr>
-
     <div class="row text-center">
       <div class="col-3">
         <p><b>LIQUIDACION DEL IVA:</b></p>
       </div>
       <div class="col-1">
-        <p><b>5%</b> <%= number_with_delimiter(total, :delimiter => ',') %></b></p>
+        <p><b>5%</b> <%= number_with_delimiter(total, :delimiter => ',') %></br></p>
       </div>
       <div class="col-3">
         <p><b>10%:</b> <%= number_with_delimiter(total / 2 , :delimiter => ',') %></b></p>
@@ -99,17 +100,16 @@
       </div>
     </div>
     <hr>
-
     <div class="row" id="buttons">
     <div class="col-9">
     </div>
     <div class="col-3">
-      <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modalProduct"> Imprimir (Ctrl + P) </button>
       <% if @order.paid == 0 %>
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalProduct"> Cobrar 50% </button>
+        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#modalProduct"> Cobrar 50% </button>
       <% else %>
-        <button type="button" class="btn btn-primary" disabled data-toggle="modal" data-target="#modalProduct"> Cobrar 50% </button>
+        <button type="button" class="btn btn-link" disabled data-toggle="modal" data-target="#modalProduct"> Cobrar 50% </button>
       <% end %>
+      <button type="button" class="btn btn-info" data-toggle="modal" disabled data-target="#modalProduct"> Imprimir (Ctrl + P) </button>
       <a type="button" class="btn btn-primary"  onclick="return confirm('Estás seguro?')" href="/orders/pay/<%=@order.id%>"> Facturar </a>
     </div>
   </div>
