--- a/starweb/app/views/orders/index.html.erb
+++ b/starweb/app/views/orders/index.html.erb
@@ -50,11 +50,11 @@
                 <hr>
                 <div class="card-text pt-2">
                   <b>Fecha del pedido</b>
-                  <br><%= order.created_at %></label>
+                  <br><%= I18n.l(order.created_at, format: '%d de %B de %Y').upcase %></label>
                 </div>
                 <hr>
                 <div class="card-text pt-2">
-                  <b>Entrega</b> <br><%= order.deliver_date %>
+                  <b>Entrega</b> <br><%= I18n.l(order.deliver_date, format: '%d de %B de %Y').upcase %>
                 </div>
                 <hr>
                 <div class="card-text pt-2">
