--- a/starweb/app/views/orders/invoice.html.erb
+++ b/starweb/app/views/orders/invoice.html.erb
@@ -10,127 +10,201 @@
 </div>
 <hr>
 
-<div class="row">
-  <div class="col-9">
-    <h6><b>FECHA,</b> <%= I18n.l(Date.today, format: '%d %B %Y').upcase %></h6>
-  </div>
-  <div class="col-3">
-    <h6><b>CONDICIONES DE VENTA:</b>  <i class="fas fa-times ml-3"></i> <b>CONTADO</b></h6>
-  </div>
-</div>
-
-<hr>
-
-<div class="row">
-  <div class="col-9">
-    <h6><b>NOMBRE O RAZÓN SOCIAL:</b> <%= "#{@order.client.first_name} #{@order.client.last_name}".upcase %></h6>
-  </div>
-  <div class="col-3">
-    <h6><b>CI o RUC:</b> <%= "#{@order.client.doc_ruc}" %></h6>
-  </div>
-</div>
-
-<hr>
-
-<h6><b>DIRECCIÓN:</b> <%= "#{@order.client.city}, #{@order.client.country}".upcase %></h6>
-
-<br>
-
-<div class="row">
-  <div class="col-12">
-    <table class="table table-sm text-center table-borderless">
-      <thead>
-      <tr>
-        <th scope="col"></th>
-        <th scope="col" style="width: 50%"></th>
-        <th scope="col"></th>
-        <th scope="col"></th>
-        <th scope="col">VALOR DE VENTA</th>
-        <th scope="col"></th>
-      </tr>
-      </thead>
-      <thead>
-      <tr>
-        <th scope="col">CANT.</th>
-        <th scope="col" style="width: 50%">CLASE DE MERCADERIAS Y/O SERVICIOS</th>
-        <th scope="col">PRECIO<BR>UNITARIO</th>
-        <th scope="col">EXENTAS</th>
-        <th scope="col">5%</th>
-        <th scope="col">10%</th>
-      </tr>
-      </thead>
-      <tbody>
-      <% total = 0 %>
-      <% @order.has_products.each do |hasProduct| %>
-        <% total += hasProduct.quantity * hasProduct.product.price %>
-        <tr>
-          <th scope="row"><%= hasProduct.quantity %></th scope="row">
-          <th scope="row"><%= hasProduct.product.name %></th>
-          <th scope="row"><%= number_with_delimiter(hasProduct.product.price, :delimiter => ',') %></th>
-          <th scope="row"></th>
-          <th scope="row"></th>
-          <th scope="row"><%= number_with_delimiter(hasProduct.quantity * hasProduct.product.price , :delimiter => ',') %></th>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
-    <br>
-    <hr>
-    <div class="row">
-      <div class="col-9 pl-5">
-        <p id="total_string"><b>TOTAL A PAGAR GS.</b></p>
-      </div>
-      <div class="col-3 pl-5">
-        <p><b>TOTAL:</b> <%= number_with_delimiter(total, :delimiter => ',') %></br></p>
-      </div>
-    </div>
-    <hr>
-    <div class="row text-center">
-      <div class="col-3">
-        <p><b>LIQUIDACION DEL IVA:</b></p>
-      </div>
-      <div class="col-1">
-        <p><b>5%</b> <%= number_with_delimiter(total, :delimiter => ',') %></br></p>
-      </div>
-      <div class="col-3">
-        <p><b>10%:</b> <%= number_with_delimiter(total / 2 , :delimiter => ',') %></b></p>
-      </div>
-      <div class="col-5">
-        <p><b>TOTAL IVA:</b> <%= number_with_delimiter(total, :delimiter => ',') %></b></p>
-      </div>
-    </div>
-    <hr>
-    <div class="row" id="buttons">
+<!-- First -->
+<div id="first-invoice">
+  <div class="row">
     <div class="col-9">
+      <h6><b>FECHA,</b> <%= I18n.l(Date.today, format: '%d %B %Y').upcase %></h6>
     </div>
     <div class="col-3">
-      <% if @order.paid == 0 %>
-        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#modalProduct"> Cobrar 50% </button>
-      <% else %>
-        <button type="button" class="btn btn-link" disabled data-toggle="modal" data-target="#modalProduct"> Cobrar 50% </button>
-      <% end %>
+      <h6><b>CONDICIONES DE VENTA:</b>  <i class="fas fa-times ml-3"></i> <b>CONTADO</b></h6>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-9">
+      <h6><b>NOMBRE O RAZÓN SOCIAL:</b> <%= "#{@order.client.first_name} #{@order.client.last_name}".upcase %></h6>
+    </div>
+    <div class="col-3">
+      <h6><b>CI o RUC:</b> <%= "#{@order.client.doc_ruc}" %></h6>
+    </div>
+  </div>
+
+  <hr>
+
+  <h6><b>DIRECCIÓN:</b> <%= "#{@order.client.city}, #{@order.client.country}".upcase %></h6>
+
+  <br>
+
+  <div class="row">
+    <div class="col-12">
+      <table class="table table-sm text-center table-borderless">
+        <thead>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col" style="width: 50%"></th>
+          <th scope="col"></th>
+          <th scope="col"></th>
+          <th scope="col">VALOR DE VENTA</th>
+          <th scope="col"></th>
+        </tr>
+        </thead>
+        <thead>
+        <tr>
+          <th scope="col">CANT.</th>
+          <th scope="col" style="width: 50%">CLASE DE MERCADERIAS Y/O SERVICIOS</th>
+          <th scope="col">PRECIO<BR>UNITARIO</th>
+          <th scope="col">EXENTAS</th>
+          <th scope="col">5%</th>
+          <th scope="col">10%</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% total = 0 %>
+        <% @order.has_products.each do |hasProduct| %>
+          <% total += hasProduct.quantity * hasProduct.product.price %>
+          <tr>
+            <th scope="row"><%= hasProduct.quantity %></th scope="row">
+            <th scope="row"><%= hasProduct.product.name %></th>
+            <th scope="row"><%= number_with_delimiter(hasProduct.product.price, :delimiter => ',') %></th>
+            <th scope="row"><%= number_with_delimiter((hasProduct.quantity * hasProduct.product.price) - (hasProduct.quantity * hasProduct.product.price * 10 / 100) , :delimiter => ',') %></th>
+            <th scope="row">----------</th>
+            <th scope="row"><%= number_with_delimiter(hasProduct.quantity * hasProduct.product.price , :delimiter => ',') %></th>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+      <br>
+      <hr>
+      <div class="row">
+        <div class="col-9 pl-5">
+          <p id="totalStringF"><b>TOTAL A PAGAR GS.</b></p>
+        </div>
+        <div class="col-3 pl-5">
+          <p><b>TOTAL:</b> <%= number_with_delimiter(total, :delimiter => ',') %></br></p>
+        </div>
+      </div>
+      <hr>
+      <div class="row text-center">
+        <div class="col-3">
+          <p><b>LIQUIDACION DEL IVA:</b></p>
+        </div>
+        <div class="col-1">
+          <p><b>5%</b> ------------ </br></p>
+        </div>
+        <div class="col-3">
+          <p><b>10%:</b> <%= number_with_delimiter((total * 10) / 100 , :delimiter => ',') %></b></p>
+        </div>
+        <div class="col-5">
+          <p><b>TOTAL IVA:</b> <%= number_with_delimiter((total * 10) / 100 , :delimiter => ',') %></b></p>
+        </div>
+      </div>
+      <hr>
+    </div>
+    <div id="buttons">
       <button type="button" class="btn btn-info" data-toggle="modal" disabled data-target="#modalProduct"> Imprimir (Ctrl + P) </button>
       <a type="button" class="btn btn-primary"  onclick="return confirm('Estás seguro?')" href="/orders/pay/<%=@order.id%>"> Facturar </a>
     </div>
   </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="modalProduct" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Cobrar 50%</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+
+
+
+<!-- Second -->
+<div id="second-invoice">
+  <div class="row mt-5">
+    <div class="col-9">
+      <h6><b>FECHA,</b> <%= I18n.l(Date.today, format: '%d %B %Y').upcase %></h6>
+    </div>
+    <div class="col-3">
+      <h6><b>CONDICIONES DE VENTA:</b>  <i class="fas fa-times ml-3"></i> <b>CONTADO</b></h6>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-9">
+      <h6><b>NOMBRE O RAZÓN SOCIAL:</b> <%= "#{@order.client.first_name} #{@order.client.last_name}".upcase %></h6>
+    </div>
+    <div class="col-3">
+      <h6><b>CI o RUC:</b> <%= "#{@order.client.doc_ruc}" %></h6>
+    </div>
+  </div>
+
+  <hr>
+
+  <h6><b>DIRECCIÓN:</b> <%= "#{@order.client.city}, #{@order.client.country}".upcase %></h6>
+
+  <br>
+
+  <div class="row">
+    <div class="col-12">
+      <table class="table table-sm text-center table-borderless">
+        <thead>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col" style="width: 50%"></th>
+          <th scope="col"></th>
+          <th scope="col"></th>
+          <th scope="col">VALOR DE VENTA</th>
+          <th scope="col"></th>
+        </tr>
+        </thead>
+        <thead>
+        <tr>
+          <th scope="col">CANT.</th>
+          <th scope="col" style="width: 50%">CLASE DE MERCADERIAS Y/O SERVICIOS</th>
+          <th scope="col">PRECIO<BR>UNITARIO</th>
+          <th scope="col">EXENTAS</th>
+          <th scope="col">5%</th>
+          <th scope="col">10%</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% total = 0 %>
+        <% @order.has_products.each do |hasProduct| %>
+          <% total += hasProduct.quantity * hasProduct.product.price %>
+          <tr>
+            <th scope="row"><%= hasProduct.quantity %></th scope="row">
+            <th scope="row"><%= hasProduct.product.name %></th>
+            <th scope="row"><%= number_with_delimiter(hasProduct.product.price, :delimiter => ',') %></th>
+            <th scope="row"><%= number_with_delimiter((hasProduct.quantity * hasProduct.product.price) - (hasProduct.quantity * hasProduct.product.price * 10 / 100) , :delimiter => ',') %></th>
+            <th scope="row">----------</th>
+            <th scope="row"><%= number_with_delimiter(hasProduct.quantity * hasProduct.product.price , :delimiter => ',') %></th>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+      <br>
+      <hr>
+      <div class="row">
+        <div class="col-9 pl-5">
+          <p id="totalStringS"><b>TOTAL A PAGAR GS.</b></p>
+        </div>
+        <div class="col-3 pl-5">
+          <p><b>TOTAL:</b> <%= number_with_delimiter(total, :delimiter => ',') %></br></p>
+        </div>
       </div>
-      <div class="modal-body">
-        <h2>Gs. <%= number_with_delimiter(total / 2 , :delimiter => ',') %></h2>
+      <hr>
+      <div class="row text-center">
+        <div class="col-3">
+          <p><b>LIQUIDACION DEL IVA:</b></p>
+        </div>
+        <div class="col-1">
+          <p><b>5%</b> ------------ </br></p>
+        </div>
+        <div class="col-3">
+          <p><b>10%:</b> <%= number_with_delimiter((total * 10) / 100 , :delimiter => ',') %></b></p>
+        </div>
+        <div class="col-5">
+          <p><b>TOTAL IVA:</b> <%= number_with_delimiter((total * 10) / 100 , :delimiter => ',') %></b></p>
+        </div>
       </div>
-      <div class="modal-footer">
-        <a type="button" class="btn btn-success" href="/orders/half/<%=@order.id%>">Cobrar</a>
-      </div>
+      <hr>
     </div>
   </div>
 </div>
@@ -138,6 +212,7 @@
 <script type="text/javascript">
     $(document).ready(function() {
         let result = numeroALetras(<%= total %>);
-        document.getElementById('total_string').innerHTML='<b>TOTAL A PAGAR GS.</b> ' + result;
+        document.getElementById('totalStringF').innerHTML='<b>TOTAL A PAGAR GS.</b> ' + result;
+        document.getElementById('totalStringS').innerHTML='<b>TOTAL A PAGAR GS.</b> ' + result;
     });
 </script>
