--- a/starweb/app/views/users/index.html.erb
+++ b/starweb/app/views/users/index.html.erb
@@ -1,61 +1,1 @@
-<h1>Usuarios</h1>
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Usuarios</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Index</li>
-  </ol>
-</nav>
-</div>
-<hr>
-<div id="page-inner">
-  <div class="row">
-    <div class="col-md-12">
-      <!-- Search -->
-      <div class="mr-3 form-inline">
-        <%= search_form_for @q do |f| %>
-          <%= f.search_field :first_name_or_last_name_or_doc_num_or_phone_or_email_or_city_or_country_cont, class: 'form-control mr-sm-2', autofocus: true %>
-
-          <%= f.submit class: 'btn btn-outline-success my-2 my-sm-0' %>
-        <% end %>
-      </div>
-      <br>
-      <div class="table-responsive">
-        <table class="table table-striped table-bordered table-hover">
-          <thead>
-            <tr>
-              <th>Email</th>
-              <th>Nombre</th>
-              <th>Apellido</th>
-              <th>Rol</th>
-              <th>Editar permisos</th>
-              <th>Eliminar usuario</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @users.each do |user| %>
-            <tr>
-              <td><%= user.email %></td>
-              <td><%= user.first_name %></td>
-              <td><%= user.last_name %></td>
-              <% if user.permission_level == '3' %>
-              <td>Admin</td>
-              <% elsif user.permission_level == '1' %>
-              <td>Secretaria</td>
-              <% elsif user.permission_level == '2' %>
-              <td>Equipo de trabajo</td>
-              <% else %>
-              <td>No asignado</td>
-              <%end%>
-              <td><%= link_to '', users_edit_path(user), class: 'fas fa-edit' %></td>
-              <td><%= link_to '', users_destroy_path(user), data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
-        <%= link_to 'Nuevo', new_user_invitation_path, class: 'btn btn-primary' %>
-      </div>
-    </br>
-  </div>
-  <!-- Pagination -->
-  <%= render 'partials/pagination', paginate: @users %>
-</div>
+= render_report 'my_users'
