Added more reports

--- a/starweb/app/assets/stylesheets/style.scss
+++ b/starweb/app/assets/stylesheets/style.scss
@@ -136,6 +136,13 @@ footer {
   display: contents;
 }
 
+.btn-primary {
+  margin-left: 5px;
+}
+
+.reports_kit_actions {
+  margin-bottom: 50px;
+}
 
 @media print {
   html, body {
