--- a/starweb/app/views/reports/index.html.haml
+++ b/starweb/app/views/reports/index.html.haml
@@ -5,14 +5,27 @@
       %a{:href => "#"} Reportes
     %li.breadcrumb-item.active{"aria-current" => "page"} Index
 
+  %h2 Pedidos
+  %hr
   .row
     .col-md-6.col-sm-12
       %h3 Estado de pedidos
       = render_report 'orders'
 
     .col-md-6.col-sm-12
-      %h3 Clientes registrados
+      %h3 Pedidos por cliente
       = render_report 'orders_client'
+
+  .row
+    .col-md-6.col-sm-12
+      %h3 Fecha de pedidos
+      = render_report 'orders_date' do |report|
+        = report.form do |f|
+          .pull-right
+            = f.date_range :created_at
+
+  %h2 Clientes
+  %hr
   .row
     .col-md-6.col-sm-12
       %h3 Stock de productos
@@ -22,6 +35,8 @@
       %h3 Usuarios del sistema
       = render_report 'my_users'
 
+  %h2 Productos
+  %hr
   .row
     .col-md-6.col-sm-12
       %h3 Estado de pedidos
@@ -30,3 +45,10 @@
     .col-md-6.col-sm-12
       %h3 Clientes registrados
       = render_report 'clients'
+
+  %h2 Sistema
+  %hr
+  .row
+    .col-md-6.col-sm-12
+      %h3 Usuarios del sistema
+      = render_report 'users_of_system'
