Added total in foreign currencies

--- a/starweb/app/assets/stylesheets/style.css
+++ b/starweb/app/assets/stylesheets/style.css
@@ -92,6 +92,10 @@ footer {
 #select2-e1-container {
   line-height: 40px !important; }
 
+.cotizaciones-widget header .logo {
+    display: none !important;
+}
+
 @media print {
     body {
         font-family: Consolas;
