--- a/starweb/app/views/orders/invoice.html.erb
+++ b/starweb/app/views/orders/invoice.html.erb
@@ -14,7 +14,7 @@
 <div id="first-invoice">
   <div class="row">
     <div class="col-9">
-      <h6><b>FECHA,</b> <%= I18n.l(Date.today, format: '%d %B %Y').upcase %></h6>
+      <h6><b>FECHA,</b> ENCARNACIÓN <%= I18n.l(Date.today, format: '%d %B %Y').upcase %></h6>
     </div>
     <div class="col-3">
       <h6><b>CONDICIONES DE VENTA:</b>  <i class="fas fa-times ml-3"></i> <b>CONTADO</b></h6>
@@ -109,8 +109,6 @@
     </div>
   </div>
 </div>
-
-
 
 
 <!-- Second -->
