--- a/starweb/app/views/invoices/show.html.erb
+++ b/starweb/app/views/invoices/show.html.erb
@@ -67,10 +67,11 @@
           <tr>
             <th scope="row"><%= hasProduct.quantity %></th scope="row">
             <th scope="row"><%= hasProduct.description %></th>
-            <th scope="row"><%= number_with_delimiter(hasProduct.net_amount, :delimiter => ',') %></th>
-            <th scope="row"><%= number_with_delimiter((hasProduct.quantity * hasProduct.net_amount) - (hasProduct.quantity * hasProduct.net_amount * 10 / 100) , :delimiter => ',') %></th>
+            <th scope="row"><%= number_with_delimiter('%.0f' %  hasProduct.net_amount, :delimiter => '.') %></th>
             <th scope="row">----------</th>
-            <th scope="row"><%= number_with_delimiter(hasProduct.quantity * hasProduct.net_amount , :delimiter => ',') %></th>
+            <th scope="row">----------</th>
+            <% total10 = hasProduct.quantity * hasProduct.net_amount %>
+            <th scope="row"><%= number_with_delimiter( '%.0f' % total10, :delimiter => '.') %></th>
           </tr>
         <% end %>
         </tbody>
@@ -82,7 +83,7 @@
           <p id="totalStringF"><b>TOTAL A PAGAR GS.</b></p>
         </div>
         <div class="col-3 pl-5">
-          <p><b>TOTAL:</b> <%= number_with_delimiter(total, :delimiter => ',') %></br></p>
+          <p><b>TOTAL:</b> <%= number_with_delimiter( '%.0f' % total, :delimiter => '.') %></br></p>
         </div>
       </div>
       <hr>
@@ -94,10 +95,12 @@
           <p><b>5%</b> ------------ </br></p>
         </div>
         <div class="col-3">
-          <p><b>10%:</b> <%= number_with_delimiter((total * 10) / 100 , :delimiter => ',') %></b></p>
+          <% iva10 = (total * 10) / 100 %>
+          <p><b>10%:</b> <%=  number_with_delimiter( '%.0f' % iva10, :delimiter => '.') %></b></p>
         </div>
         <div class="col-5">
-          <p><b>TOTAL IVA:</b> <%= number_with_delimiter((total * 10) / 100 , :delimiter => ',') %></b></p>
+          <% ivatotal =  (total * 10) / 100 %>
+          <p><b>TOTAL IVA:</b> <%= number_with_delimiter( '%.0f' % ivatotal, :delimiter => '.') %></b></p>
         </div>
       </div>
       <hr>
